--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ flask = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
 gunicorn = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.6"
