--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ flask-sqlalchemy = "*"
 flask-migrate = "*"
 gunicorn = "*"
 python-dotenv = "*"
+pandas = "*"
 
 [requires]
 python_version = "3.6"
